--- a/harjoitus12.io/styles.css
+++ b/harjoitus12.io/styles.css
@@ -9,7 +9,7 @@ font-family: Droid Sans, arial, serif;	}
 	padding: 1px 0px 1px 0px; 
 	font-size: 14px;
 	}
-.div.col-lg-4:hover { border: 3px solid blue; }
+.col-lg-4:hover { border: 3px solid blue; }
 .container.col-sm-12.footer { border: 3px solid pink;
 		text-align: center;
 		background-color: #de7470;}
